Tsff 2918 avslag ved innvilgelse (#1548)
### Behov / Bakgrunn

Førstegangsinnvilgelser med en tom-dato pga avkortning fører til
avslagsbrev istedenfor innvilgelsesbrev.

### Løsning

- `DetaljertResultatPeriodeGrunnlag.avslåtteVilkår()` filtrerer bort
vilkår avslått med `AVKORTET`, slik at alle fire konsumentene
(`FørstegangsInnvilgelseStrategy`, `AvslagInngangsvilkårStrategy`,
`UendretVedtakStrategy`, `FørstegangsAvslagInnholdBygger`) ser kun
reelle avslag. Fikset sentralt framfor i hver enkelt strategi fordi det
er ikke et avslagsårsak som er relevant for brevet. Perioden blir
uansett med pga behandlingsårsaken.
- De avkortede vilkårene legges i et eget sett `avkortedeVilkår` på
`DetaljertResultat` for diagnostikk.
- Ny `YtelseVedtaksbrevReglerTest` for aktivitetspenger med
regresjonstest for avkortet bostedsvilkår.

Det som gjenstår: Legge inn tekster ved avslag. Vurdere å endre til å
bruke innvilgelsesbrevet hvis delvis innvilgelse, istedenfor kun ved
full innvilgelse. Nå velges avslagsbrev ved delvis innvilgelse med en
annen avslagsårsak.

### Andre endringer

Opprydding i testdata for aktivitetspenger:

- `AktivitetspengerTestScenario` har fått en `Builder` og en
`Map<VilkårType, LocalDateTimeline<VilkårUtfall>>` slik at vilkår kan
settes direkte på scenarioet.
- Ny `VilkårUtfall`-record (utfall, avslagsårsak, fritekstBrev)
erstatter wrapper-recordene
`AvslagScenario`/`AvkortetInnvilgelseScenario` i
`AktivitetspengerFørstegangsbehandlingScenarioer`; de fire
avslag-metodene er samlet i én felles hjelper.
- `AktivitetspengerTestScenarioBuilder.settOppVilkårOgPersoner()` setter
nå vilkårene fra scenarioet automatisk.

---

### Sjekkliste for godkjenner

- [ ] Ingen uhensiktsmessig spesialbehandling av saker (hardkodede
aktørId-er, saksnumre, org.nr som styrer forretningslogikk)
- [ ] Flyway-migrasjoner er vurdert (destruktive endringer, korrekt
versjonering, påvirkning på økonomiske data)
- [ ] Sporbarhet: lenke til Jira, Slack-tråd, eller en tydelig
beskrivelse 